--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 								<div class="row">
 									<div class="col-sm-6 col-md-5">
 									  <div class="about-img">
-										<img src="images\professional_pic_priyanka.jpg" class="img-fluid rounded b-shadow-a" alt="">
+										<img src="images\profile_pic.jpg" class="img-fluid rounded b-shadow-a" alt="">
 									  </div>
 									</div>
 									<!-- Details next to profile image -->
