--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@ Transformers, UNet, SimpleITK, DVC, Docker, and MLflow for reliable healthcare A
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://github.com/dishant24/dishantsutariya.github.io/resume.pdf">resumelink</a></p>
+	            <p><a href="https://github.com/dishant24/personal_portfolio/blob/main/resume.pdf">resumelink</a></p>
 	          </div>
           </div>
 
