Revise resume content and improve formatting
Updated resume details and fixed formatting issues.

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
             <p>Innovative AI and Deep Learning specialist with a Master’s degree in Medical Image and Data Processing from FAU Erlangen-Nuremberg. Expertise in developing end-to-end deep learning solutions for medical imaging and healthcare, from prediction, segmentation to generative diffusion models, with a proven focus on model validation and algorithmic fairness. Experienced in PyTorch,
-Transformers, UNet, SimpleITK, DVC, Docker, and MLflow for reliable healthcare AI delivery </div>
+Transformers, UNet, SimpleITK, DVC, Docker, and MLflow for reliable healthcare AI delivery.</p> </div>
         </div>
 
 		<div class="row">
@@ -326,10 +326,10 @@ Transformers, UNet, SimpleITK, DVC, Docker, and MLflow for reliable healthcare A
 		<div class="row">
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">Decemebr 2024-August 2025</span>
-						<h2>Data Analyst</h2>
+						<span class="date">Decemebr 2024 - August 2025</span>
+						<h2>Research Student</h2>
 						<span class="position">Fraunhofer Institute for Digital Medicine MEVIS</span>
-						<p class="mt-4">Fraunhofer MEVIS develops real-world medical software solutions for image-supported early detection, diagnosis, and therapy.
+						<p class="mt-4">Fraunhofer MEVIS develops real-world medical software solutions for image-supported early detection, diagnosis, and therapy.>
 							<ul>
 								<li>Engineered a Python-based statistical toolkit to assess ML model fairness and performance rigorously.</li>
 								<li>Implemented advanced validation metrics, including AUROC, Precision-Recall Gain (PRG), and uncertainty estimation with multiple comparison corrections, to identify and quantify performance disparities.</li>
@@ -343,10 +343,10 @@ Transformers, UNet, SimpleITK, DVC, Docker, and MLflow for reliable healthcare A
 
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">August 2021- July 2022</span>
+						<span class="date">August 2021 - July 2022</span>
 						<h2>Machine learning Intern </h2>
 						<span class="position">Maruti Techlabs</span>
-						<p class="mt-4">Maruti Techlabs is a custom software product development company that leverages next-generation technologies to offer software engineering, mobile and web development, DevOps, artificial intelligence, cloud-native development, quality engineering, staff augmentation, and more services.
+						<p class="mt-4">Maruti Techlabs is a custom software product development company that leverages next-generation technologies to offer software engineering, mobile and web development, DevOps, artificial intelligence, cloud-native development, quality engineering, staff augmentation, and more services.>
 							<ul>
 								<li>Resolved critical class imbalance in the vehicle insurance dataset by implementing SMOTE, which improved the F1-score by 10% and reduced false negatives by 8%.</li>
 								<li>Performed exploratory data analysis and feature importance evaluation on a vehicle insurance dataset of 50,000+ records, identifying Vehicle Damage and Policy Type as top predictors, improving model accuracy by 12 %.</li>
@@ -359,7 +359,43 @@ Transformers, UNet, SimpleITK, DVC, Docker, and MLflow for reliable healthcare A
 						</p>
 					</div>
 
-
+					
+		<div class="row">
+		  <h1 class="big-4">Achievements</h1>
+		  <div class="underline"></div>
+		</div>
+		<br>
+		<div class="row">
+		  <div class="col-md-12">
+		    <div class="resume-wrap ftco-animate">
+		      <span class="date">September 2023</span>
+		      <h2>Siemens Healthineers D&A Summer Challenge — 1st Place</h2>
+		      <span class="position">Forchheim, Germany</span>
+		      <p class="mt-4">
+		        Image registration of chest X-rays to a standard lung for lesion monitoring.
+		      </p>
+		      <ul>
+		        <li>Learned foundations of image registration and data analysis under industry mentors.</li>
+		        <li>Collaborated to design and present a working solution; won by democratic voting.</li>
+		      </ul>
+		    </div>
+		  </div>
+		
+		  <div class="col-md-12">
+		    <div class="resume-wrap ftco-animate">
+		      <span class="date">October 2025</span>
+		      <h2>Poster Award — FAIMI Workshop @ MICCAI 2025</h2>
+		      <span class="position">meval: A Statistical Toolbox for Fine‑Grained Model Performance Analysis</span>
+		      <p class="mt-4">
+        		In: Puyol‑Antón, E., et al. (Eds.), Fairness of AI in Medical Imaging, Lecture Notes in Computer Science, vol 15976. Springer, Cham. DOI: 10.1007/978-3-032-05870-6_19
+      		   </p>
+		      <ul>
+		        <li>Demonstrated rigorous bias audits with uncertainty estimation and multiple‑comparison controls.</li>
+		        <li>Showcased interactive dashboards that cut 8 hours/week of manual review.</li>
+		      </ul>
+		    </div>
+		  </div>
+		</div>
 
 		<div class="row">
 			<h1 class="big-4">Education</h1>
@@ -372,7 +408,7 @@ Transformers, UNet, SimpleITK, DVC, Docker, and MLflow for reliable healthcare A
     				<div class="resume-wrap ftco-animate">
     					<span class="date">October 2022 - August 2025</span>
     					<h2>Masters in Medical Engineering</h2>
-						<h1>Specialization: Medical Image and Data Processing</h1>
+						<p>Specialization: Medical Image and Data Processing</p>
     					<span class="position">Friedrich-Alexander-Universität</span>
     				</div>
     			</div>
@@ -558,8 +594,8 @@ Transformers, UNet, SimpleITK, DVC, Docker, and MLflow for reliable healthcare A
 			</div>
 				<br>
 					<ul class="ftco-footer-social list-unstyled d-flex justify-content-center align-items-center mb-0">
-					  <li class="ftco-animate normal-txt">Find me on  </li>
-					  <li class="ftco-animate"><a href="https://github.com/dishant24/"><span class="icon-linkedin"></span></a></li>  
+					  <li class="ftco-animate normal-txt">Find me on </li>
+					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/dishant-sutariya/"><span class="icon-linkedin"></span></a></li>  
 					  <li class="ftco-animate"><a href="https://github.com/dishant24"><span class="icon-github"></span></a></li>
 					</ul>
 				<br>
