Revise Poster Award publication information
Updated publication details for the Poster Award entry.

--- a/index.html
+++ b/index.html
@@ -358,6 +358,8 @@ Transformers, UNet, SimpleITK, DVC, Docker, and MLflow for reliable healthcare A
 							</ul>
 						</p>
 					</div>
+				</div>
+		</div>
 
 					
 		<div class="row">
@@ -387,7 +389,10 @@ Transformers, UNet, SimpleITK, DVC, Docker, and MLflow for reliable healthcare A
 		      <h2>Poster Award — FAIMI Workshop @ MICCAI 2025</h2>
 		      <span class="position">meval: A Statistical Toolbox for Fine‑Grained Model Performance Analysis</span>
 		      <p class="mt-4">
-        		In: Puyol‑Antón, E., et al. (Eds.), Fairness of AI in Medical Imaging, Lecture Notes in Computer Science, vol 15976. Springer, Cham. DOI: 10.1007/978-3-032-05870-6_19
+        		Sutariya, D., Petersen, E. (2026). meval: A Statistical Toolbox
+for Fine-Grained Model Performance Analysis. In E. PuyolAntón, et al. (Eds.), Fairness of AI in Medical Imaging (Lecture
+Notes in Computer Science, vol 15976). Springer, Cham. DOI:
+10.1007/978-3-032-05870-6_19
       		   </p>
 		      <ul>
 		        <li>Demonstrated rigorous bias audits with uncertainty estimation and multiple‑comparison controls.</li>
