Update achievements and education sections in index.html

--- a/index.html
+++ b/index.html
@@ -361,46 +361,6 @@ Transformers, UNet, SimpleITK, DVC, Docker, and MLflow for reliable healthcare A
 				</div>
 		</div>
 
-					
-		<div class="row">
-		  <h1 class="big-4">Achievements</h1>
-		  <div class="underline"></div>
-		</div>
-		<br>
-		<div class="row">
-		  <div class="col-md-12">
-		    <div class="resume-wrap ftco-animate">
-		      <span class="date">September 2023</span>
-		      <h2>Siemens Healthineers D&A Summer Challenge — 1st Place</h2>
-		      <span class="position">Forchheim, Germany</span>
-		      <p class="mt-4">
-		        Image registration of chest X-rays to a standard lung for lesion monitoring.
-		      </p>
-		      <ul>
-		        <li>Learned foundations of image registration and data analysis under industry mentors.</li>
-		        <li>Collaborated to design and present a working solution; won by democratic voting.</li>
-		      </ul>
-		    </div>
-		  </div>
-		
-		  <div class="col-md-12">
-		    <div class="resume-wrap ftco-animate">
-		      <span class="date">October 2025</span>
-		      <h2>Poster Award — FAIMI Workshop @ MICCAI 2025</h2>
-		      <span class="position">meval: A Statistical Toolbox for Fine‑Grained Model Performance Analysis</span>
-		      <p class="mt-4">
-        		Sutariya, D., Petersen, E. (2026). meval: A Statistical Toolbox
-for Fine-Grained Model Performance Analysis. In E. PuyolAntón, et al. (Eds.), Fairness of AI in Medical Imaging (Lecture
-Notes in Computer Science, vol 15976). Springer, Cham. DOI:
-10.1007/978-3-032-05870-6_19
-      		   </p>
-		      <ul>
-		        <li>Demonstrated rigorous bias audits with uncertainty estimation and multiple‑comparison controls.</li>
-		        <li>Showcased interactive dashboards that cut 8 hours/week of manual review.</li>
-		      </ul>
-		    </div>
-		  </div>
-		</div>
 
 		<div class="row">
 			<h1 class="big-4">Education</h1>
@@ -408,24 +368,78 @@ Notes in Computer Science, vol 15976). Springer, Cham. DOI:
 		</div>
 		<br>
 		
-			<div class="row">
-    			<div class="col-md-6">
-    				<div class="resume-wrap ftco-animate">
-    					<span class="date">October 2022 - August 2025</span>
-    					<h2>Masters in Medical Engineering</h2>
-						<p>Specialization: Medical Image and Data Processing</p>
-    					<span class="position">Friedrich-Alexander-Universität</span>
-    				</div>
-    			</div>
+<div class="row">
+  <div class="col-md-6">
+    <div class="resume-wrap ftco-animate">
+      <span class="date">December 2024 - August 2025</span>
+      <h2>Research Student</h2>
+      <span class="position">Fraunhofer Institute for Digital Medicine MEVIS</span>
+      <p class="mt-4">
+        Fraunhofer MEVIS develops real-world medical software solutions for image-supported early detection, diagnosis, and therapy.
+      </p>
+      <ul>
+        <li>Engineered a Python-based statistical toolkit to assess fairness and performance.</li>
+        <li>Implemented AUROC, PRG, uncertainty, and multiple-comparison corrections.</li>
+        <li>Built Plotly dashboards saving ~8 hours/week.</li>
+        <li>Coordinated MICCAI 2025 submission with DVC-versioned experiments.</li>
+      </ul>
+    </div>
+  </div>
 
-    			<div class="col-md-6">
-    				<div class="resume-wrap ftco-animate">
-    					<span class="date">July 2017 - June 2021</span>
-    					<h2>Bachelors in Computer Engineering</h2>
-    					<span class="position">Gujarat Technological University</span>
-    				</div>
-				</div>
-    		</div>
+  <div class="col-md-6">
+    <div class="resume-wrap ftco-animate">
+      <span class="date">August 2021 - July 2022</span>
+      <h2>Machine Learning Intern</h2>
+      <span class="position">Maruti Techlabs</span>
+      <p class="mt-4">
+        Maruti Techlabs is a custom software product development company leveraging next‑gen technologies.
+      </p>
+      <ul>
+        <li>Resolved class imbalance with SMOTE; +10% F1, −8% false negatives.</li>
+        <li>EDA on 50k+ records; top predictors improved accuracy by 12%.</li>
+        <li>Benchmarked models; XGBoost achieved 92% accuracy.</li>
+        <li>Improved accuracy +6% via tuning and 10‑fold CV.</li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+
+					
+		<div class="row">
+		  <h1 class="big-4">Achievements</h1>
+		  <div class="underline"></div>
+		</div>
+		<br>
+		<div class="row">
+  <div class="col-md-6">
+    <div class="resume-wrap ftco-animate">
+      <span class="date">September 2023</span>
+      <h2>Siemens Healthineers D&A Summer Challenge — 1st Place</h2>
+      <span class="position">Forchheim, Germany</span>
+      <p class="mt-4">Image registration of chest X‑rays to a standard lung for lesion monitoring.</p>
+      <ul>
+        <li>Learned foundations of registration and data analysis under mentors.</li>
+        <li>Collaborated on a working solution; won by democratic voting.</li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="col-md-6">
+    <div class="resume-wrap ftco-animate">
+      <span class="date">October 2025</span>
+      <h2>Poster Award — FAIMI Workshop @ MICCAI 2025</h2>
+      <span class="position">meval: A Statistical Toolbox for Fine‑Grained Model Performance Analysis</span>
+      <p class="mt-4">
+        Sutariya, D., Petersen, E. (2026). meval: A Statistical Toolbox for Fine‑Grained Model Performance Analysis. In E. Puyol‑Antón, et al., LNCS 15976. Springer, Cham. DOI: 10.1007/978-3-032-05870-6_19
+      </p>
+      <ul>
+        <li>Bias audits with uncertainty estimation and multiple‑comparison controls.</li>
+        <li>Interactive dashboards reduced manual review by ~8 hours/week.</li>
+      </ul>
+    </div>
+  </div>
+</div>
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
