Update education section in index.html

--- a/index.html
+++ b/index.html
@@ -368,42 +368,23 @@ Transformers, UNet, SimpleITK, DVC, Docker, and MLflow for reliable healthcare A
 		</div>
 		<br>
 		
-<div class="row">
-  <div class="col-md-6">
-    <div class="resume-wrap ftco-animate">
-      <span class="date">December 2024 - August 2025</span>
-      <h2>Research Student</h2>
-      <span class="position">Fraunhofer Institute for Digital Medicine MEVIS</span>
-      <p class="mt-4">
-        Fraunhofer MEVIS develops real-world medical software solutions for image-supported early detection, diagnosis, and therapy.
-      </p>
-      <ul>
-        <li>Engineered a Python-based statistical toolkit to assess fairness and performance.</li>
-        <li>Implemented AUROC, PRG, uncertainty, and multiple-comparison corrections.</li>
-        <li>Built Plotly dashboards saving ~8 hours/week.</li>
-        <li>Coordinated MICCAI 2025 submission with DVC-versioned experiments.</li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="col-md-6">
-    <div class="resume-wrap ftco-animate">
-      <span class="date">August 2021 - July 2022</span>
-      <h2>Machine Learning Intern</h2>
-      <span class="position">Maruti Techlabs</span>
-      <p class="mt-4">
-        Maruti Techlabs is a custom software product development company leveraging next‑gen technologies.
-      </p>
-      <ul>
-        <li>Resolved class imbalance with SMOTE; +10% F1, −8% false negatives.</li>
-        <li>EDA on 50k+ records; top predictors improved accuracy by 12%.</li>
-        <li>Benchmarked models; XGBoost achieved 92% accuracy.</li>
-        <li>Improved accuracy +6% via tuning and 10‑fold CV.</li>
-      </ul>
-    </div>
-  </div>
-</div>
-
+		<div class="row">
+		  <div class="col-md-6">
+		    <div class="resume-wrap ftco-animate">
+		      <span class="date">October 2022 - August 2025</span>
+		      <h2>Masters in Medical Engineering</h2>
+		      <p>Specialization: Medical Image and Data Processing</p>
+		      <span class="position">Friedrich‑Alexander‑Universität</span>
+		    </div>
+		  </div>
+		  <div class="col-md-6">
+		    <div class="resume-wrap ftco-animate">
+		      <span class="date">July 2017 - June 2021</span>
+		      <h2>Bachelors in Computer Engineering</h2>
+		      <span class="position">Gujarat Technological University</span>
+		    </div>
+		  </div>
+		</div>
 
 					
 		<div class="row">
