Revise job roles and update profile information
Updated job roles and descriptions to reflect new positions and expertise.

--- a/index.html
+++ b/index.html
@@ -159,9 +159,8 @@
 
 						// Create an array of typing text
 						const typingTexts = [
-						'Biomedical AI Engineer  ',
-						'Biomedical Data Scientist  ',
-							'Medical Reseach Sciencetist'
+						'AI Engineer  ',
+						'Data Sciecetist '
 						];
 
 						// Create a function to display the typing animation for a given text
@@ -219,7 +218,7 @@
 									<div class="col-sm-6 col-md-7">
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Dishant Sutairya</span></p>
-										<p><span class="title-s">Job Role: </span> <span>Biomedical AI Engineer</span></p>
+										<p><span class="title-s">Job Role: </span> <span>AI Engineer</span></p>
 										<p><span class="title-s">Address: </span> <span>Bremen, Germany</span></p>
 									  </div>
 									</div>
@@ -275,8 +274,8 @@
 								
 								<p>Curious mind blending AI and healthcare—turning medical images into reliable, bias‑aware intelligence for real‑world impact.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
-									<li class="d-flex"><span>Profile:</span> <span>AI &amp; Machine learning</span></li>
-									<li class="d-flex"><span>Domain:</span> <span>Healthcare &amp; Medical Imaging </span></li>
+									<li class="d-flex"><span>Profile:</span> <span>Artificial Intelligent &amp; Machine learning</span></li>
+									<li class="d-flex"><span>Domain:</span> <span>Healthcare &amp; Medical Imaging &amp; Insurance</span></li>
 									<li class="d-flex"><span>Education:</span> <span>Masters in Medical Engineering</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English,German,Hindi, Gujarati</span></li>
 									<li class="d-flex"><span>Other Skills:</span> <span>Excel, Git, Docker, DVC, MLOPS</span></li>
@@ -313,8 +312,8 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>Innovative AI and Deep Learning specialist with a Master’s degree in Medical Image and Data Processing from FAU Erlangen-Nuremberg. Expertise in developing end-to-end deep learning solutions for medical imaging and healthcare, from prediction, segmentation to generative diffusion models, with a proven focus on model validation and algorithmic fairness. Experienced in PyTorch,
-Transformers, UNet, SimpleITK, DVC, Docker, and MLflow for reliable healthcare AI delivery.</p> </div>
+            <p>Innovative AI and Deep Learning specialist with a Master’s degree in Medical Image and Data Processing from FAU Erlangen-Nuremberg. Expertise in developing end-to-end deep learning solutions for divers sectors like: Healthcare, Insurance, and IT, from prediction, segmentation to generative diffusion models, with a proven focus on model validation and algorithmic fairness. Experienced in PyTorch,
+Transformers, UNet, SimpleITK, DVC, Docker, and MLflow that directly improve real-world outcomes and create measurable impact.</p> </div>
         </div>
 
 		<div class="row">
