Update about section description in index.html

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 								<h1 class="big">About</h1>
 								<h2 class="mb-4">About Me</h2>
 								
-								<p>Curious mind blending AI and healthcare—turning medical images into reliable, bias‑aware intelligence for real‑world impact.</p>
+								<p>Building deep learning systems that solve real problems and create measurable impact across industries</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Profile:</span> <span>Artificial Intelligent &amp; Machine learning</span></li>
 									<li class="d-flex"><span>Domain:</span> <span>Healthcare &amp; Medical Imaging &amp; Insurance</span></li>
