--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <div class="col-sm-6 col-md-7">
                 <div class="about-info">
                   <p><span class="title-s">Name: </span> <span>Dishant Sutariya</span></p>
-                  <p><span class="title-s">Job Role: </span> <span>Biomedical AI Engineer</span></p>
+                  <p><span class="title-s">Job Role: </span> <span>AI Engineer</span></p>
                   <p><span class="title-s">Address: </span> <span>Bremen, Germany</span></p>
                 </div>
               </div>
@@ -123,7 +123,7 @@
         <div class="counter-wrap ftco-animate d-flex mt-md-3">
           <div class="text">
             <p class="mb-4">
-              <span class="number" data-number="30">0</span> <span>+</span>
+              <span class="number" data-number="10">0</span> <span>+</span>
               <span>&nbsp; Projects completed</span>
             </p>
             <p><a href="https://www.linkedin.com/in/dishant-sutariya/" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
@@ -215,7 +215,7 @@
     <!-- CV Button -->
     <div class="row justify-content-center mt-4">
       <div class="col-md-6 text-center ftco-animate">
-        <p><a href="resume.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
+        <p><a href="https://drive.google.com/file/d/1m0LvMDoTdvY3dT8TsqFYG06IUcpaMCmX/view?usp=sharing" class="btn btn-primary py-4 px-5">Download CV</a></p>
       </div>
     </div>
   </div>
@@ -391,7 +391,7 @@
             <span class="icon-globe"></span>
           </div>
           <h3 class="mb-4">Download Resume</h3>
-          <p><a href="resume.pdf">Resume (PDF)</a></p>
+          <p><a href="https://drive.google.com/file/d/1m0LvMDoTdvY3dT8TsqFYG06IUcpaMCmX/view?usp=sharing">Resume (PDF)</a></p>
         </div>
       </div>
 
@@ -458,7 +458,7 @@
     var $this = $(this),
         countTo = $this.attr('data-number');
     $({ countNum: $this.text() }).animate({ countNum: countTo }, {
-      duration: 2000,
+      duration: 200,
       easing: 'swing',
       step: function () { $this.text(Math.floor(this.countNum)); },
       complete: function () { $this.text(this.countNum); }
