Revise content and structure in index.html
Updated various sections of the index.html file to enhance content clarity and accuracy, including job titles, descriptions, and skills. Improved the typing animation text and updated the resume details for better representation.

--- a/index.html
+++ b/index.html
@@ -157,8 +157,9 @@
 
 						// Create an array of typing text
 						const typingTexts = [
-						'AI Engineer  ',
-						'Data Sciecetist '
+						'Machine Learning Engineer  ',
+						'Data Sciecetist ',
+						'Applied Medical Imaing AI Reseacher'
 						];
 
 						// Create a function to display the typing animation for a given text
@@ -184,7 +185,7 @@
 
 						<br>
 						<br>
-			            <h2>AI/ML Engineer</h2>
+			            <h2>Applied Researcher</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 4 years of experience</h2> -->
 						<!-- <br> -->
 			            <p><a href="https://github.com/dishant24" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
@@ -270,15 +271,15 @@
 								<h1 class="big">About</h1>
 								<h2 class="mb-4">About Me</h2>
 								
-								<p>Building deep learning systems that solve real problems and create measurable impact across industries</p>
+								<p>Designing deep learning models that are fair, robust, and clinically reliable. Expertise in bias mitigation and medical image analysis. Building systems where research rigor meets real-world impact.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
-									<li class="d-flex"><span>Profile:</span> <span>Artificial Intelligent &amp; Machine learning</span></li>
+									<li class="d-flex"><span>Profile:</span> <span>Applied Medical AI Researcher &amp; Machine Learning Engineer</span></li>
 									<li class="d-flex"><span>Domain:</span> <span>Healthcare &amp; Medical Imaging &amp; Insurance</span></li>
 									<li class="d-flex"><span>Education:</span> <span>Masters in Medical Engineering</span></li>
-									<li class="d-flex"><span>Language:</span> <span>English,German,Hindi, Gujarati</span></li>
-									<li class="d-flex"><span>Other Skills:</span> <span>Excel, Git, Docker, DVC, MLOPS</span></li>
-									<li class="d-flex"><span>Frameworks:</span> <span>Pytorch, Tensorflow, ViT(Vision Transformer)</span></li>
-									<li class="d-flex"><span>AI/ML:</span> <span>Machine Learning, Deep Learning, Generative Image AI</span></li>
+									<li class="d-flex"><span>ML&DL:</span> <span>Scikit-learn, Pandas, PyTorch, TensorFlow, Opencv</span></li>	   
+									<li class="d-flex"><span>MLOps:</span> <span>MDocker,AmazonAWS,GitHubActions,Git,Weights&Biases,andMLflow</span></li>
+									<li class="d-flex"><span>Medical Imaging</span> <span>CT,X-ray, MRI, PCCT, DICOM, NIfTI, Pydicom</span></li
+									<li class="d-flex"><span>Language:</span> <span>English (Fluent), German(B1), Hindi(Native), Gujarati(Mother Toungue)</span></li>
 									<li class="d-flex"><span>Interest:</span> <span>Traveling, Gym, Sport</span></li>
 									
 								</ul>
@@ -310,8 +311,7 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>Innovative AI and Deep Learning specialist with a Master’s degree in Medical Image and Data Processing from FAU Erlangen-Nuremberg. Expertise in developing end-to-end deep learning solutions for divers sectors like: Healthcare, Insurance, and IT, from prediction, segmentation to generative diffusion models, with a proven focus on model validation and algorithmic fairness. Experienced in PyTorch,
-Transformers, UNet, SimpleITK, DVC, Docker, and MLflow that directly improve real-world outcomes and create measurable impact.</p> </div>
+            <p>I am a researcher turning fairness in medical imaging AI into reality. Built bias mitigation systems at Fraunhofer, published at MICCAI and BVM, won best poster presentation award. My work shows concrete ways to make AI fair — now I want to ship these solutions to real-world. Seeking roles where research innovation directly translates to patient outcomes.</p> </div>
         </div>
 
 		<div class="row">
@@ -321,6 +321,21 @@ Transformers, UNet, SimpleITK, DVC, Docker, and MLflow that directly improve rea
 		<br>
 		
 		<div class="row">
+			<div class="col-md-6">
+					<div class="resume-wrap ftco-animate">
+						<span class="date">Setember 2025 - March 2026</span>
+						<h2>Research Intern</h2>
+						<span class="position">Fraunhofer Institute for Digital Medicine MEVIS</span>
+						<p class="mt-4">Fraunhofer MEVIS develops real-world medical software solutions for image-supported early detection, diagnosis, and therapy.>
+							<ul>
+								<li> Implemented novel CheXmasklung cropping pipeline, reducing racial encoding (AUROC0.623 → 0.593) while preserving diagnostic accuracy (0.738 AUROC), ensuring compliance with diverse patient demographics.</li>
+								<li>Lead author for BVM 2026 coference paper, accepted paper on "Preprocessing Methods for Racial Encoding" defining new protocols for robust CXR diagnosis.</li>
+							</ul>
+						</p>
+					</div>
+
+				</div>
+			
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">Decemebr 2024 - August 2025</span>
@@ -397,8 +412,9 @@ Transformers, UNet, SimpleITK, DVC, Docker, and MLflow that directly improve rea
       <span class="position">Forchheim, Germany</span>
       <p class="mt-4">Image registration of chest X‑rays to a standard lung for lesion monitoring.</p>
       <ul>
-        <li>Learned foundations of registration and data analysis under mentors.</li>
-        <li>Collaborated on a working solution; won by democratic voting.</li>
+        <li>Participated in a 2-day hackathon focused on image rgistration of chest X-rays to a standard lung, a critical task for monitoring lesion distributions.</li>
+        <li>Acquired fundamental skills in image registration and data analysis under the guidance of industry experts.</li>
+		<li>Collaborated with a team to develop and present a solution, ultimately securing 1st place through democratic voting.</li>
       </ul>
     </div>
   </div>
@@ -441,6 +457,18 @@ Transformers, UNet, SimpleITK, DVC, Docker, and MLflow that directly improve rea
 			</p>
           </div>
         </div>
+		  <div class="row d-flex">
+          <div class="col-md-4 d-flex ftco-animate">
+          	<div class="blog-entry justify-content-end">
+              <a href="https://github.com/dishant24/Simple_RAG_Application" class="block-20 zoom-effect";">
+              </a>
+              <div class="text mt-3 float-right d-block">
+
+                <h3 class="heading"><a href="https://github.com/dishant24/Simple_RAG_Application">Simple RAG Q&A Application</a></h3>
+                <p>Q&A with Local Files is a RAG (Retrieval-Augmented Generation) application that allows users to upload documents (PDF, TXT, CSV, Excel, Word, JSON), creates searchable embeddings using FAISS vector store, and answers questions using Groq's LLM based on the most relevant document context.</p>
+              </div>
+            </div>
+          </div>
         <div class="row d-flex">
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
@@ -449,7 +477,7 @@ Transformers, UNet, SimpleITK, DVC, Docker, and MLflow that directly improve rea
               <div class="text mt-3 float-right d-block">
 
                 <h3 class="heading"><a href="https://github.com/dishant24/pcct_project">PCCT Image Generation</a></h3>
-                <p>Generate different type of energy level images of Photon Counting Computed Tomography.</p>
+                <p>Engineered a ViT‑conditioned diffusion model in PyTorch to generate multiple energy-level PCCT images from 50 keV input, achieving a Dice score of 0.86. Optimized a multi-objective loss (MSE, SSIM, perceptual loss) to preserve structural details and material discrimination for energy-resolved imaging.</p>
               </div>
             </div>
           </div>
@@ -460,7 +488,7 @@ Transformers, UNet, SimpleITK, DVC, Docker, and MLflow that directly improve rea
               <div class="text mt-3 float-right d-block">
 
                 <h3 class="heading"><a href="https://github.com/dishant24/End-to-End-Wine-Quality-Prediction">Wine Quality Prediction</a></h3>
-                <p>Built and deploy end-to-end machine learning wine quality checking project with Amazon AWS and Docker service.</p>
+                <p>Built and deployed an end-to-end wine quality prediction pipeline using machine learning, containerized with Docker and hosted on Amazon AWS. Implemented data preprocessing, model training, and an inference service to predict wine quality from key chemical properties.</p>
               </div>
             </div>
           </div>
